--- a/_config.yml
+++ b/_config.yml
@@ -109,15 +109,13 @@ analytics:
 author:
   name             : "Sean Mongru"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I'm currently finishing my Electrical and Computer Engineering degree. My dream is to work with both software and hardware to create and 
-                        deploy life-changing apps. I hope to have to opportunity to work with and learn from great engineers as I strive for greatness in all that 
-                            I work torwards!"
-  location         : "Somewhere"
-  email            :
+  bio              : "I'm currently finishing my Electrical and Computer Engineering degree. My dream is to work with both software and hardware to create and deploy life-changing apps. I hope to have to opportunity to work with and learn from great engineers as I strive for greatness in all that I work torwards!"
+  location         : "Alperton, London"
+  email            : "seanmongru@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+      url: "seanmongru@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
