--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
   - title: "About"
     url: /about/
-  - title: "projects"
+  - title: "Projects"
     url: /projects/
   # - title: "Sample Posts"
   #   url: /year-archive/
